# lightstream

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: run_test.yaml
applications/: options.py  resnet_example.py  streamingclam_example.py
applications/data/: dataset.py  dataset_regression.py
docker/: Dockerfile
docs/: index.md
docs/getting_started/: installation.md  requirements.md
docs/modules/: basemodule.md  streamingmodule.md
docs/tutorials/: classification.md  custom_models.md  dataloading.md
examples/: camelyon.py  compare_grads_resnet.py  dataset.py  grad_compare.py  grad_compare_resnet.py  grad_compare_testnet.py  maauw.py  options.py  resnet_example.py  streamingclam_example.py  tesnet_compare_grads.py
examples/data/: dataset_regression.py
getting_started/installation/: index.html
getting_started/requirements/: index.html
lightstream/: __init__.py  doodle.py  doodle_pytorch.py  doodle_resnet.py  rnn_torchviz  run_augmentations.py  scnn.py
lightstream/core/: __init__.py  constructor.py  scnn.py  utils.py
lightstream/data/: dataset.py  dataset_regression.py
lightstream/modules/: __init__.py  base.py  constructor.py  imagenet_template.py  streaming.py
lightstream/transforms/: __init__.py  utils.py
lightstream/utils/: doodle2.py  modelcheck.py
models/: resnet.py  resnets.py
models/resnet/: resnet.py  (+1 more)
notebooks/: augmentations.ipynb  camelyon_example.ipynb  imagenette_example.ipynb  scnn_comparison.ipynb
search/: search_index.json
src/: doodle.py  scnn.py  stream.py
stream/: doodle.py  scnn.py
streaming/: doodle.py  scnn.py
tests/: __init__.py  modelcheck.py  test_resnet.py  test_scnn.py
(+55 files in other folders)
