[tool.poetry]
name = "lightstream"
version = "0.1.0"
description = ""
authors = ["stephandooper <stephandooper@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
setuptools = "^68.2.2"
torch = {version = "2.0.0"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

